--- a/src/data/grammar/vocab/exclamations.yaml
+++ b/src/data/grammar/vocab/exclamations.yaml
@@ -77,7 +77,7 @@ exclamationPopReference:
 - I'll be back
 - you complete me
 - bazinga
-- I've made a huge
+- I've made a huge mistake
 - "stab them with the #adjCorporeal# end"
 - "[_weirdFood:meat's,milk's,eggs are][_foodIs:meat's,eggs are,milk is,#liquid#'s,#creatureTypes# #_weirdFood#]#_foodIs# back on the menu, boys"
 - "we'll always have #randomMtgLocation#"
