--- a/src/data/grammar/headlines/mtg-gatherer.yaml
+++ b/src/data/grammar/headlines/mtg-gatherer.yaml
@@ -22,7 +22,7 @@
         "this is the [_shift:timeshifted,colorshifted,playtest,Space#colon# the Convergence,good]#_shift# version of #randomRealCard#.",
         "when the #xth# ability resolves, the #cardCategory# you [_put:put, don't put]#_put# #cardLocation# stays #cardLocation#.",
         "…finally, #_cardname# is placed #cardLocation#. This is a state-based action.",
-        "#_cardname.sIfNeeded# are #cardLocation# regardless of whether they're #cardState# or #cardState#.",
+        "#_cardname.sIfNeeded# are #cardLocation# [_whether:whether,regardless of whether]#_whether# they're [#cardStatePair#]#_state# or #_oppositeState#.",
         "cards not actually #cardLocation# can't be affected by #_cardname#.",
         "does not #gameEffectAction# itself. But can be #_actionPastTense# by another #_cardname#.",
         "this card can be used to put [_perm1:#randomNonlandPermanentCard#][_perm2:#randomNonlandPermanentCard#][_what:two copies of #_perm1#,both #_perm1# and #_perm2#,both sides of #_perm1#]#_what# onto the battlefield at once.",
@@ -222,6 +222,16 @@
       "is uncounterable[_is:is]",
       "is #cardQuality[_is:is]",
       "deals damage equal to it's converted mana cost to its controller[_is:does]"
+    ],
+
+    "cardStatePair": [
+      "[_state:tapped][_oppositeState:untapped]",
+      "[_state:flipped][_oppositeState:unflipped]",
+      "[_state:morphed][_oppositeState:unmorphed]",
+      "[_state:transformed][_oppositeState:not]",
+      "[_state:face-up][_oppositeState:face-down]",
+      "[_state:phased in][_oppositeState:phased out]",
+      "[_state:revealed][_oppositeState:not]"
     ],
 
     "rulingYear": ["1993","1994","1995","1996","1997","1998","1999","2001","2002","2003","2004","2005","2006","2006","2008","2009","2010","2011","2012","2013","2014","2015","2016","2017","2018", "1993","1996","1998","2004","2009","2012","2014","2015","2016","2017","2018"]
