--- a/src/data/grammar/mtg/community/tournament-hijinks.yaml
+++ b/src/data/grammar/mtg/community/tournament-hijinks.yaml
@@ -78,7 +78,7 @@ teamDisqualifyingAction:
 - 'communicating through an elaborate system of clicks and whistles'
 - '[_singularNoun:#singularNoun#]wearing [_matching:matching,custom,hand-made]#_matching# t-shirts that say "#tshirtPhrase.capitalizeAll#"'
 - '[#pluralPronouns#]#disqualifyingAction#'
-- 'acutally being just [_what:one person in a very large costume,nine kids in three adult-sized suites,one person who kept changing hats]#_what#'
+- 'acutally being just [_what:one person in a very large costume,nine kids in three adult-sized suits,one person who kept changing hats]#_what#'
 - fighting over who gets the middle seat
 - "scouting [_what:opponents' decklists,opponents' sideboards,opponents' #gameAccessory.s#,potential dinner dates,for their new modeling agency,for their farm league team,the judge's amazon wishlists]#_what#"
 - sitting on each other's laps
