--- a/src/data/grammar/mtg/community/mtg-events.yaml
+++ b/src/data/grammar/mtg/community/mtg-events.yaml
@@ -2,6 +2,8 @@
   "tournamentType": [
       "Pro Tour",
       "Invitational",
+      "Mythic Championship",
+      "Mythic Qualifier",
       "GP",
       "Grand Prix",
       "FNM",
