--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -107,9 +107,11 @@
       "Magic player[#somePronoun#]",
       "sorcerer[#somePronoun#]",
       "MODO player[#somePronoun#]",
+      "MPL player[#somePronoun#]",      
+      "[_playerType: grinder, whale,-only player]Arena#_playerType#[#somePronoun#]",       
       "MTGO developer[#somePronoun#]",
       "judge[#somePronoun#]",
-      "[_type:,MTGO ,PPTQ ]#_type#grinder[#somePronoun#]",
+      "[_type:,MTGO ,PPTQ ,Arena ]#_type#grinder[#somePronoun#]",
       "casual player[#somePronoun#]",
       "forum poster[#somePronoun#]",
       "Facebook commenter[#somePronoun#]",
