--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -68,6 +68,7 @@
   	"Alaborn",
   	"Amrou",
   	"An-Zerrin",
+    "Ardenvale",
   	"Ashenmoor",
     "Atzocan",
     "Barrenton",
@@ -75,9 +76,11 @@
   	"Coldraith's Keep",
   	"Corondor",
   	"Erdwal",
+    "Garenbrig",
   	"Gatsaf",
     "Gramur Forest",
   	"the Helvault",
+    "Irencrag",
     "Joraga",
   	"Jukai",
   	"Lambholt",
@@ -100,6 +103,7 @@
     "Thraben",
   	"Tidehollow",
   	"Unx",
+    "Vantress",
   	"Vectis City",
   	"Wanderbrine",
   	"Wolf's Hackle"
@@ -120,8 +124,10 @@
       "Dinrova",
       "Duskmantle",
       "Ekundu",
+      "Embereth",    
       "Esper",
       "Evos Isle",
+      "Faeburrow",
       "Femeref",
       "Ghirapur",
       "Glen Elendra",
@@ -139,6 +145,7 @@
       "Krosan",
       "Kuldotha",
       "Llanowar",
+      "Locthwain",
       "Malakir",
       "Martyne",
       "Mercadian",
